# scaledev

./: .gitignore  README.md  cicd-requirements.txt  pyproject.toml  requirements.txt
notebooks/: correlations.ipynb  modeler.py  preprocessor.py  reduced_items.ipynb  scale_dev.ipynb  vizer.py
notebooks/cfa/: cfa.ipynb  cfa_bifactor.ipynb  cfa_firstorder.ipynb  cfa_general_analysis.ipynb  cfa_model_plot  path_diagram
notebooks/cfa/ETS Scale/: report.html
notebooks/cfa/ETS Scale Bi-factor/: report.html
notebooks/cfa/ETS Scale Bi-factor/plots/: 1  2  3  4
notebooks/cfa/ETS Scale First Order/: report.html
notebooks/cfa/ETS Scale First Order/plots/: 1  2  3  4
notebooks/cfa/ETS Scale/plots/: 1  2  3  4
notebooks/cfa/plots/: cfa_model_plot_bifactor  cfa_model_plot_first_order
notebooks/efa_first_pass/: correlations.ipynb  efa.ipynb  efa_reduced_items.ipynb
notebooks/efa_second_pass/: correlations.ipynb  efa_cleaned_data_v2_reduced.ipynb
notebooks/first_pass/: correlations.ipynb  efa.ipynb  efa_reduced_items.ipynb
notebooks/second_pass/: README.md
scaledev/: __init__.py  modeler.py  preprocessor.py  vizer.py
