[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scaledev"
version = "0.0.1"
dependencies = [
    "factor-analyzer",
    "jupyterlab",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas",
    "pingouin",
    "scikit-learn"
]

[project.optional-dependencies]
cicd = [
    "mypy",
    "pytest",
    "ruff"
]
